--- a/index.html
+++ b/index.html
@@ -31,17 +31,22 @@
       height: 100vh;
       overflow: hidden;
       position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
     }
 
     .slider-wrapper {
       display: flex;
       width: 400vw;
-      transition: transform 0.8s ease-in-out;
+      transition: transform 0.5s ease-in-out;
     }
 
     .slide {
       width: 100vw;
-      height: 100vh;
+      height: calc(100vh - 110px);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -51,11 +56,9 @@
     }
 
     .slide img {
-      width: 80%;
-      max-width: 280px;
-      margin-bottom: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.08);
+      width: 70%;
+      max-width: 240px;
+      margin-bottom: 1.2rem;
     }
 
     .slide h1 {
@@ -71,21 +74,28 @@
       padding: 0 1rem;
     }
 
-    .navigation {
-      position: absolute;
-      bottom: 35px;
+    .bottom-controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.5rem;
       width: 100%;
+    }
+
+    .navigation {
       display: flex;
       justify-content: space-between;
-      padding: 0 1.5rem;
-      z-index: 2;
+      width: 100%;
+      max-width: 420px;
     }
 
     .nav-btn {
-      padding: 0.5rem 1.2rem;
-      font-size: 0.9rem;
+      flex: 1;
+      padding: 0.4rem 0.6rem;
+      font-size: 0.8rem;
+      margin: 0 0.3rem;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       background: var(--primary-color);
       color: white;
       cursor: pointer;
@@ -97,19 +107,16 @@
     }
 
     .dots {
-      position: absolute;
-      bottom: 15px;
-      width: 100%;
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      gap: 0.4rem;
     }
 
     .dot {
-      height: 10px;
-      width: 10px;
-      margin: 0 4px;
+      height: 8px;
+      width: 8px;
       background-color: #d1d5db;
       border-radius: 50%;
-      display: inline-block;
       transition: background-color 0.3s ease;
     }
 
@@ -119,15 +126,21 @@
 
     @media (max-width: 480px) {
       .slide h1 {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
       }
 
       .slide p {
-        font-size: 0.85rem;
+        font-size: 0.8rem;
       }
 
       .slide img {
-        max-width: 220px;
+        max-width: 180px;
+      }
+
+      .nav-btn {
+        font-size: 0.75rem;
+        padding: 0.4rem;
+        margin: 0 0.2rem;
       }
     }
   </style>
@@ -156,36 +169,46 @@
         <p>Utilize GPA calculators, timetables, and more — all built into your academic toolkit.</p>
       </div>
     </div>
-    <div class="navigation">
-      <button class="nav-btn" onclick="prevSlide()">Back</button>
-      <button class="nav-btn" onclick="nextSlide()">Next</button>
+
+    <div class="bottom-controls">
+      <div class="navigation">
+        <button class="nav-btn" onclick="prevSlide()">Back</button>
+        <button class="nav-btn" id="nextBtn" onclick="nextSlide()">Next</button>
+      </div>
+      <div class="dots" id="dots"></div>
     </div>
-    <div class="dots" id="dots"></div>
   </div>
 
   <script>
     const slider = document.getElementById('slider');
     const dotsContainer = document.getElementById('dots');
+    const nextBtn = document.getElementById('nextBtn');
     const slides = document.querySelectorAll('.slide');
     const totalSlides = slides.length;
     let currentIndex = 0;
-    let interval = null;
 
     function updateSlider() {
       slider.style.transform = `translateX(-${currentIndex * 100}vw)`;
       document.querySelectorAll('.dot').forEach((dot, index) => {
         dot.classList.toggle('active', index === currentIndex);
       });
+      nextBtn.textContent = currentIndex === totalSlides - 1 ? 'Get Started' : 'Next';
     }
 
     function nextSlide() {
-      currentIndex = (currentIndex + 1) % totalSlides;
-      updateSlider();
+      if (currentIndex < totalSlides - 1) {
+        currentIndex++;
+        updateSlider();
+      } else {
+        window.location.href = 'login.html';
+      }
     }
 
     function prevSlide() {
-      currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
-      updateSlider();
+      if (currentIndex > 0) {
+        currentIndex--;
+        updateSlider();
+      }
     }
 
     function createDots() {
@@ -198,9 +221,12 @@
     }
 
     function startAutoSlide() {
-      interval = setInterval(() => {
-        nextSlide();
-      }, 4000); // 4 seconds
+      setInterval(() => {
+        if (currentIndex < totalSlides - 1) {
+          currentIndex++;
+          updateSlider();
+        }
+      }, 4000);
     }
 
     createDots();
