--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       bottom: 35px;
       width: 100%;
       display: flex;
-      justify-content: center;
-      gap: 1rem;
+      justify-content: space-between;
+      padding: 0 1.5rem;
       z-index: 2;
     }
 
@@ -156,7 +156,6 @@
         <p>Utilize GPA calculators, timetables, and more — all built into your academic toolkit.</p>
       </div>
     </div>
-
     <div class="navigation">
       <button class="nav-btn" onclick="prevSlide()">Back</button>
       <button class="nav-btn" onclick="nextSlide()">Next</button>
