--- a/index.html
+++ b/index.html
@@ -31,22 +31,17 @@
       height: 100vh;
       overflow: hidden;
       position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem;
     }
 
     .slider-wrapper {
       display: flex;
       width: 400vw;
-      transition: transform 0.5s ease-in-out;
+      transition: transform 0.8s ease-in-out;
     }
 
     .slide {
       width: 100vw;
-      height: calc(100vh - 110px);
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -56,9 +51,11 @@
     }
 
     .slide img {
-      width: 70%;
-      max-width: 240px;
-      margin-bottom: 1.2rem;
+      width: 80%;
+      max-width: 280px;
+      margin-bottom: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.08);
     }
 
     .slide h1 {
@@ -74,28 +71,21 @@
       padding: 0 1rem;
     }
 
-    .bottom-controls {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 0.5rem;
-      width: 100%;
-    }
-
     .navigation {
-      position: relative;
+      position: absolute;
+      bottom: 35px;
       width: 100%;
-      max-width: 100%;
       display: flex;
-      justify-content: space-between;
-      padding: 0 1rem;
+      justify-content: center;
+      gap: 1rem;
+      z-index: 2;
     }
 
     .nav-btn {
-      padding: 0.4rem 0.7rem;
-      font-size: 0.75rem;
+      padding: 0.5rem 1.2rem;
+      font-size: 0.9rem;
       border: none;
-      border-radius: 6px;
+      border-radius: 10px;
       background: var(--primary-color);
       color: white;
       cursor: pointer;
@@ -107,16 +97,19 @@
     }
 
     .dots {
-      display: flex;
-      justify-content: center;
-      gap: 0.4rem;
+      position: absolute;
+      bottom: 15px;
+      width: 100%;
+      text-align: center;
     }
 
     .dot {
-      height: 8px;
-      width: 8px;
+      height: 10px;
+      width: 10px;
+      margin: 0 4px;
       background-color: #d1d5db;
       border-radius: 50%;
+      display: inline-block;
       transition: background-color 0.3s ease;
     }
 
@@ -126,20 +119,15 @@
 
     @media (max-width: 480px) {
       .slide h1 {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
       }
 
       .slide p {
-        font-size: 0.8rem;
+        font-size: 0.85rem;
       }
 
       .slide img {
-        max-width: 180px;
-      }
-
-      .nav-btn {
-        font-size: 0.7rem;
-        padding: 0.35rem 0.6rem;
+        max-width: 220px;
       }
     }
   </style>
@@ -169,45 +157,36 @@
       </div>
     </div>
 
-    <div class="bottom-controls">
-      <div class="navigation">
-        <button class="nav-btn" onclick="prevSlide()">Back</button>
-        <button class="nav-btn" id="nextBtn" onclick="nextSlide()">Next</button>
-      </div>
-      <div class="dots" id="dots"></div>
+    <div class="navigation">
+      <button class="nav-btn" onclick="prevSlide()">Back</button>
+      <button class="nav-btn" onclick="nextSlide()">Next</button>
     </div>
+    <div class="dots" id="dots"></div>
   </div>
 
   <script>
     const slider = document.getElementById('slider');
     const dotsContainer = document.getElementById('dots');
-    const nextBtn = document.getElementById('nextBtn');
     const slides = document.querySelectorAll('.slide');
     const totalSlides = slides.length;
     let currentIndex = 0;
+    let interval = null;
 
     function updateSlider() {
       slider.style.transform = `translateX(-${currentIndex * 100}vw)`;
       document.querySelectorAll('.dot').forEach((dot, index) => {
         dot.classList.toggle('active', index === currentIndex);
       });
-      nextBtn.textContent = currentIndex === totalSlides - 1 ? 'Get Started' : 'Next';
     }
 
     function nextSlide() {
-      if (currentIndex < totalSlides - 1) {
-        currentIndex++;
-        updateSlider();
-      } else {
-        window.location.href = 'login.html';
-      }
+      currentIndex = (currentIndex + 1) % totalSlides;
+      updateSlider();
     }
 
     function prevSlide() {
-      if (currentIndex > 0) {
-        currentIndex--;
-        updateSlider();
-      }
+      currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
+      updateSlider();
     }
 
     function createDots() {
@@ -220,12 +199,9 @@
     }
 
     function startAutoSlide() {
-      setInterval(() => {
-        if (currentIndex < totalSlides - 1) {
-          currentIndex++;
-          updateSlider();
-        }
-      }, 4000);
+      interval = setInterval(() => {
+        nextSlide();
+      }, 4000); // 4 seconds
     }
 
     createDots();
