--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     .navigation {
       position: absolute;
-      bottom: 35px;
+      top: 20px;
       width: 100%;
       display: flex;
       justify-content: center;
@@ -129,11 +129,26 @@
       .slide img {
         max-width: 220px;
       }
+
+      .nav-btn {
+        padding: 0.4rem 1rem;
+        font-size: 0.85rem;
+      }
+
+      .navigation {
+        top: 15px;
+        flex-wrap: wrap;
+      }
     }
   </style>
 </head>
 <body>
   <div class="boarding-container">
+    <div class="navigation">
+      <button class="nav-btn" onclick="prevSlide()">Back</button>
+      <button class="nav-btn" onclick="nextSlide()">Next</button>
+    </div>
+
     <div class="slider-wrapper" id="slider">
       <div class="slide">
         <img src="1.png" alt="Welcome">
@@ -157,10 +172,6 @@
       </div>
     </div>
 
-    <div class="navigation">
-      <button class="nav-btn" onclick="prevSlide()">Back</button>
-      <button class="nav-btn" onclick="nextSlide()">Next</button>
-    </div>
     <div class="dots" id="dots"></div>
   </div>
 
