--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       font-size: 1.6rem;
       color: var(--primary-color);
       margin-bottom: 0.75rem;
+      font-weight: 800;
     }
 
     .slide p {
@@ -69,21 +70,23 @@
       max-width: 500px;
       color: #374151;
       padding: 0 1rem;
+      margin-bottom: 2rem;
     }
 
-    .navigation {
-      position: absolute;
-      top: 20px;
-      width: 100%;
+    /* Fixed navigation buttons */
+    .fixed-navigation {
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
       display: flex;
-      justify-content: center;
-      gap: 1rem;
-      z-index: 2;
+      gap: 0.8rem;
+      z-index: 1000;
     }
 
     .nav-btn {
-      padding: 0.5rem 1.2rem;
-      font-size: 0.9rem;
+      padding: 0.6rem 1.4rem;
+      font-size: 0.95rem;
       border: none;
       border-radius: 10px;
       background: var(--primary-color);
@@ -98,7 +101,7 @@
 
     .dots {
       position: absolute;
-      bottom: 15px;
+      bottom: 80px;
       width: 100%;
       text-align: center;
     }
@@ -131,24 +134,23 @@
       }
 
       .nav-btn {
-        padding: 0.4rem 1rem;
         font-size: 0.85rem;
+        padding: 0.5rem 1.2rem;
       }
 
-      .navigation {
-        top: 15px;
-        flex-wrap: wrap;
+      .fixed-navigation {
+        bottom: 20px;
+        gap: 0.6rem;
+      }
+
+      .dots {
+        bottom: 65px;
       }
     }
   </style>
 </head>
 <body>
   <div class="boarding-container">
-    <div class="navigation">
-      <button class="nav-btn" onclick="prevSlide()">Back</button>
-      <button class="nav-btn" onclick="nextSlide()">Next</button>
-    </div>
-
     <div class="slider-wrapper" id="slider">
       <div class="slide">
         <img src="1.png" alt="Welcome">
@@ -172,6 +174,13 @@
       </div>
     </div>
 
+    <!-- Fixed nav buttons -->
+    <div class="fixed-navigation">
+      <button class="nav-btn" onclick="prevSlide()">Back</button>
+      <button class="nav-btn" onclick="nextSlide()">Next</button>
+    </div>
+
+    <!-- Dots -->
     <div class="dots" id="dots"></div>
   </div>
 
@@ -212,7 +221,7 @@
     function startAutoSlide() {
       interval = setInterval(() => {
         nextSlide();
-      }, 4000); // 4 seconds
+      }, 4000);
     }
 
     createDots();
