--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MY VTU - Boarding</title>
+  <title>MY VTU - Onboarding</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -45,14 +45,15 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      padding: 1rem;
+      justify-content: flex-start;
+      padding: 2.5rem 1rem 5rem;
       text-align: center;
     }
 
     .slide img {
       width: 80%;
       max-width: 280px;
+      margin-top: 2rem;
       margin-bottom: 1.5rem;
       border-radius: 12px;
       box-shadow: 0 8px 18px rgba(0, 0, 0, 0.08);
@@ -70,18 +71,40 @@
       max-width: 500px;
       color: #374151;
       padding: 0 1rem;
-      margin-bottom: 2rem;
     }
 
-    /* Fixed navigation buttons */
-    .fixed-navigation {
+    /* Dots */
+    .dots {
+      position: fixed;
+      bottom: 85px; /* moved slightly up from 70px */
+      width: 100%;
+      text-align: center;
+      z-index: 2;
+    }
+
+    .dot {
+      height: 10px;
+      width: 10px;
+      margin: 0 4px;
+      background-color: #d1d5db;
+      border-radius: 50%;
+      display: inline-block;
+      transition: background-color 0.3s ease;
+    }
+
+    .dot.active {
+      background-color: var(--primary-color);
+    }
+
+    /* Fixed centered buttons */
+    .navigation {
       position: fixed;
       bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
+      width: 100%;
       display: flex;
+      justify-content: center;
       gap: 0.8rem;
-      z-index: 1000;
+      z-index: 3;
     }
 
     .nav-btn {
@@ -99,27 +122,6 @@
       background: var(--secondary-color);
     }
 
-    .dots {
-      position: absolute;
-      bottom: 80px;
-      width: 100%;
-      text-align: center;
-    }
-
-    .dot {
-      height: 10px;
-      width: 10px;
-      margin: 0 4px;
-      background-color: #d1d5db;
-      border-radius: 50%;
-      display: inline-block;
-      transition: background-color 0.3s ease;
-    }
-
-    .dot.active {
-      background-color: var(--primary-color);
-    }
-
     @media (max-width: 480px) {
       .slide h1 {
         font-size: 1.4rem;
@@ -131,6 +133,7 @@
 
       .slide img {
         max-width: 220px;
+        margin-top: 1.5rem;
       }
 
       .nav-btn {
@@ -138,13 +141,13 @@
         padding: 0.5rem 1.2rem;
       }
 
-      .fixed-navigation {
-        bottom: 20px;
+      .navigation {
+        bottom: 25px;
         gap: 0.6rem;
       }
 
       .dots {
-        bottom: 65px;
+        bottom: 70px;
       }
     }
   </style>
@@ -174,14 +177,14 @@
       </div>
     </div>
 
-    <!-- Fixed nav buttons -->
-    <div class="fixed-navigation">
+    <!-- Dots -->
+    <div class="dots" id="dots"></div>
+
+    <!-- Navigation Buttons -->
+    <div class="navigation">
       <button class="nav-btn" onclick="prevSlide()">Back</button>
       <button class="nav-btn" onclick="nextSlide()">Next</button>
     </div>
-
-    <!-- Dots -->
-    <div class="dots" id="dots"></div>
   </div>
 
   <script>
