--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       display: flex;
       justify-content: center;
 
-      gap: 17rem; /* ✅ Increased spacing between Back and Next buttons */
+      gap: 4rem; /* ✅ Increased space between Back and Next buttons (Desktop) */
       z-index: 3;
       padding: 0 2rem;
     }
@@ -149,7 +149,7 @@
       .navigation {
         bottom: 25px;
 
-        gap: 2.5rem; /* ✅ Maintained spacing between buttons for small screens */
+        gap: 6rem; /* ✅ More space between Back and Next on mobile */
         padding: 0 1.5rem;
       }
 
