--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       display: flex;
       justify-content: center;
 
-      gap: 4rem; /* ✅ Increased space between Back and Next buttons (Desktop) */
+      gap: 4rem;
       z-index: 3;
       padding: 0 2rem;
     }
@@ -148,8 +148,7 @@
 
       .navigation {
         bottom: 25px;
-
-        gap: 11rem; /* ✅ More space between Back and Next on mobile */
+        gap: 11rem;
         padding: 0 1.5rem;
       }
 
@@ -188,7 +187,7 @@
 
     <div class="navigation">
       <button class="nav-btn" onclick="prevSlide()">Back</button>
-      <button class="nav-btn" onclick="nextSlide()">Next</button>
+      <button class="nav-btn" id="nextBtn" onclick="nextSlide()">Next</button>
     </div>
   </div>
 
@@ -199,17 +198,32 @@
     const totalSlides = slides.length;
     let currentIndex = 0;
     let interval = null;
+    const nextBtn = document.getElementById('nextBtn');
 
     function updateSlider() {
       slider.style.transform = `translateX(-${currentIndex * 100}vw)`;
       document.querySelectorAll('.dot').forEach((dot, index) => {
         dot.classList.toggle('active', index === currentIndex);
       });
+      checkLastSlide(); // ✅ Check if last slide to update button
+    }
+
+    function checkLastSlide() {
+      if (currentIndex === totalSlides - 1) {
+        nextBtn.textContent = 'Continue';
+      } else {
+        nextBtn.textContent = 'Next';
+      }
     }
 
     function nextSlide() {
-      currentIndex = (currentIndex + 1) % totalSlides;
-      updateSlider();
+      if (currentIndex === totalSlides - 1) {
+        // ✅ Redirect to home.html on last slide
+        window.location.href = 'home.html';
+      } else {
+        currentIndex = (currentIndex + 1) % totalSlides;
+        updateSlider();
+      }
     }
 
     function prevSlide() {
