--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       padding: 0;
       box-sizing: border-box;
       font-family: 'Inter', sans-serif;
+      -webkit-tap-highlight-color: transparent;
+      outline: none;
     }
 
     body {
@@ -102,7 +104,6 @@
       width: 100%;
       display: flex;
       justify-content: center;
-
       gap: 4rem;
       z-index: 3;
       padding: 0 2rem;
@@ -118,6 +119,7 @@
       cursor: pointer;
       transition: background 0.3s ease;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      outline: none;
     }
 
     .nav-btn:hover {
@@ -205,7 +207,7 @@
       document.querySelectorAll('.dot').forEach((dot, index) => {
         dot.classList.toggle('active', index === currentIndex);
       });
-      checkLastSlide(); // ✅ Check if last slide to update button
+      checkLastSlide();
     }
 
     function checkLastSlide() {
@@ -218,7 +220,6 @@
 
     function nextSlide() {
       if (currentIndex === totalSlides - 1) {
-        // ✅ Redirect to home.html on last slide
         window.location.href = 'home.html';
       } else {
         currentIndex = (currentIndex + 1) % totalSlides;
