--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent; /* 🟢 Remove blue tap highlight */
     }
 
     body {
@@ -176,7 +177,6 @@
       background: #eee;
     }
 
-    /* Earth-style toggle */
     .toggle-switch {
       width: 50px;
       height: 26px;
