--- a/home.html
+++ b/home.html
@@ -29,20 +29,20 @@
       padding: 16px;
     }
 
-    /* ✅ Final Polished Banner */
+    /* ✅ Polished Banner Styling */
     .banner-wrapper {
       display: flex;
       justify-content: center;
-      margin: 16px;
+      padding: 16px;
     }
 
     .banner-wrapper img {
       width: 100%;
-      max-width: 1024px;
-      border-radius: 16px;
+      max-width: 1000px;
+      border-radius: 18px;
       display: block;
       object-fit: cover;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.25);
     }
 
     .section {
@@ -216,7 +216,6 @@
       max-width: 300px;
       text-align: center;
     }
-
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -246,7 +245,7 @@
     </div>
   </header>
 
-  <!-- ✅ Final Banner With Clean Padding & Auto Fit -->
+  <!-- ✅ Updated Banner Integration -->
   <div class="banner-wrapper">
     <img src="11.png" alt="VTU Banner" />
   </div>
