--- a/home.html
+++ b/home.html
@@ -258,7 +258,7 @@
   <!-- Banner with updated text and smaller size -->
   <div class="banner">
     <h3>MY VTU</h3>
-    <p>Your Companion for VTU Life</p>
+    <p>The place where expensive begins</p>
   </div>
 
   <!-- Main content -->
