--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MY VTU</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     * {
       margin: 0;
@@ -30,26 +32,26 @@
     }
 
     .container {
-      padding: 0 16px 80px;
+      padding: 0 16px 100px;
     }
 
     .banner {
       background: linear-gradient(135deg, orange, #ff8800);
-      padding: 12px; /* Reduced padding */
-      border-radius: 10px; /* Slightly smaller curve */
+      padding: 12px;
+      border-radius: 10px;
       text-align: center;
       color: white;
-      margin: 8px 0 6px 0; /* Tighter spacing */
+      margin: 8px 0 6px 0;
     }
 
     .banner h3 {
-      font-size: 18px; /* Smaller font */
+      font-size: 18px;
       font-weight: 600;
       margin-bottom: 4px;
     }
 
     .banner p {
-      font-size: 13px; /* Smaller subtext */
+      font-size: 13px;
     }
 
     .section {
@@ -126,6 +128,7 @@
       background: #333;
       border-radius: 6px;
       white-space: nowrap;
+      cursor: pointer;
     }
 
     body.light-theme .timetable {
@@ -145,6 +148,7 @@
       justify-content: space-around;
       padding: 10px 0;
       border-top: 1px solid #333;
+      z-index: 1003;
     }
 
     footer i {
@@ -157,13 +161,11 @@
       border-color: #ccc;
     }
 
-    #modal, #notifModal {
+    #modal, #notifModal, #semPopup {
       display: none;
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
       background: rgba(0,0,0,0.8);
       justify-content: center;
       align-items: center;
@@ -223,13 +225,76 @@
     body.light-theme .toggle-switch {
       background: #ddd;
     }
-  </style>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    .sem-box {
+      background: #fff;
+      color: #000;
+      padding: 16px;
+      border-radius: 12px;
+      text-align: center;
+      width: 90%;
+      max-width: 280px;
+      font-size: 14px;
+    }
+
+    .sem-box h3 {
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+
+    .sem-box button {
+      background: orange;
+      color: #fff;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-weight: bold;
+      font-size: 13px;
+      cursor: pointer;
+    }
+
+    @media (max-width: 480px) {
+      .top-bar h3 {
+        font-size: 16px;
+      }
+
+      .section-title {
+        font-size: 16px;
+      }
+
+      .grid-item {
+        font-size: 12px;
+        padding: 10px;
+      }
+
+      .icon {
+        font-size: 20px;
+      }
+
+      .timetable div {
+        padding: 8px 12px;
+        font-size: 13px;
+      }
+
+      footer i {
+        font-size: 18px;
+      }
+
+      header {
+        padding-bottom: 8px;
+      }
+
+      .container {
+        padding-bottom: 100px;
+      }
+
+      footer {
+        padding: 8px 0;
+      }
+    }
+  </style>
 </head>
 <body>
-  <!-- Top bar -->
   <div class="top-bar">
     <h3>MY VTU</h3>
     <div style="display: flex; align-items: center; gap: 12px;">
@@ -240,28 +305,25 @@
     </div>
   </div>
 
-  <!-- Header section with timetable -->
   <header>
     <h2>Welcome, <span style="color: orange">Shridhar J</span></h2>
     <div class="timetable">
-      <div>1st Sem</div>
-      <div>2nd Sem</div>
-      <div>3rd Sem</div>
-      <div>4th Sem</div>
-      <div>5th Sem</div>
-      <div>6th Sem</div>
-      <div>7th Sem</div>
-      <div>8th Sem</div>
+      <div onclick="openSem('1st Sem')">1st Sem</div>
+      <div onclick="openSem('2nd Sem')">2nd Sem</div>
+      <div onclick="openSem('3rd Sem')">3rd Sem</div>
+      <div onclick="openSem('4th Sem')">4th Sem</div>
+      <div onclick="openSem('5th Sem')">5th Sem</div>
+      <div onclick="openSem('6th Sem')">6th Sem</div>
+      <div onclick="openSem('7th Sem')">7th Sem</div>
+      <div onclick="openSem('8th Sem')">8th Sem</div>
     </div>
   </header>
 
-  <!-- Banner with updated text and smaller size -->
   <div class="banner">
     <h3>MY VTU</h3>
     <p>The place where expensive begins</p>
   </div>
 
-  <!-- Main content -->
   <div class="container">
     <div class="section">
       <div class="section-title">Academics & Resources</div>
@@ -303,7 +365,6 @@
     </div>
   </div>
 
-  <!-- Bottom Nav -->
   <footer>
     <i class="fas fa-home"></i>
     <i class="fas fa-comments"></i>
@@ -311,32 +372,57 @@
     <i class="fas fa-th"></i>
   </footer>
 
-  <!-- Modals -->
-  <div id="modal">
-    <div class="modal-content" id="modalContent"></div>
-  </div>
+  <div id="modal"><div class="modal-content" id="modalContent"></div></div>
+  <div id="notifModal"><div class="modal-content">No notifications yet</div></div>
+  <div id="semPopup"><div class="sem-box"><h3 id="popupSem">Materials Available</h3><button onclick="openDrive()">Continue</button></div></div>
 
-  <div id="notifModal">
-    <div class="modal-content">No notifications yet</div>
-  </div>
-
-  <!-- JS for interactions -->
   <script>
+    const driveLinks = {
+      '1st Sem': 'https://drive.google.com/drive/folders/12ebUzFWAdDn1Iov089cz1eWnwU5Tp-pp?usp=drive_link',
+      '2nd Sem': 'https://drive.google.com/drive/folders/12ebUzFWAdDn1Iov089cz1eWnwU5Tp-pp?usp=drive_link',
+      '3rd Sem': 'https://drive.google.com/drive/folders/18x12b7ul-EDj_eT__u7GPY_dK_HOXIL3?usp=drive_link',
+      '4th Sem': 'https://drive.google.com/drive/folders/1NjId1TfNBZ759IU6wNAPMVD0T7UM884n?usp=drive_link',
+      '5th Sem': 'https://drive.google.com/drive/folders/1LEvzezF2PkcBASl8aw845UQL36H0wEDx?usp=drive_link',
+      '6th Sem': 'https://drive.google.com/drive/folders/1-RUOQojYTxaTYIhdhN45iTTf5MoNWwnD?usp=drive_link',
+      '7th Sem': 'https://drive.google.com/file/d/7ggg/view',
+      '8th Sem': 'https://drive.google.com/file/d/8hhh/view'
+    };
+
+    let currentSem = '';
+
+    function openSem(sem) {
+      currentSem = sem;
+      document.getElementById('popupSem').innerText = `${sem} – Materials Available`;
+      document.getElementById('semPopup').style.display = 'flex';
+    }
+
+    function openDrive() {
+      const url = driveLinks[currentSem];
+      if (url) {
+        window.open(url, '_blank');
+      }
+      document.getElementById('semPopup').style.display = 'none';
+    }
+
     function showModal(content) {
       document.getElementById('modalContent').innerText = content;
       document.getElementById('modal').style.display = 'flex';
     }
 
-    document.getElementById('modal').onclick = () => {
-      document.getElementById('modal').style.display = 'none';
+    document.getElementById('modal').onclick = (e) => {
+      if (e.target.id === 'modal') document.getElementById('modal').style.display = 'none';
     };
 
     function showNotif() {
       document.getElementById('notifModal').style.display = 'flex';
     }
 
-    document.getElementById('notifModal').onclick = () => {
-      document.getElementById('notifModal').style.display = 'none';
+    document.getElementById('notifModal').onclick = (e) => {
+      if (e.target.id === 'notifModal') document.getElementById('notifModal').style.display = 'none';
+    };
+
+    document.getElementById('semPopup').onclick = (e) => {
+      if (e.target.id === 'semPopup') document.getElementById('semPopup').style.display = 'none';
     };
 
     function toggleTheme() {
