--- a/home.html
+++ b/home.html
@@ -5,300 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MY VTU</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      -webkit-tap-highlight-color: transparent;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #121212;
-      color: #fff;
-      transition: background 0.3s, color 0.3s;
-      line-height: 1.6;
-    }
-
-    body.light-theme {
-      background-color: #ffffff;
-      color: #000000;
-    }
-
-    header {
-      padding: 12px 16px 4px;
-    }
-
-    .container {
-      padding: 0 16px 100px;
-    }
-
-    .banner {
-      background: linear-gradient(135deg, orange, #ff8800);
-      padding: 12px;
-      border-radius: 10px;
-      text-align: center;
-      color: white;
-      margin: 8px 0 6px 0;
-    }
-
-    .banner h3 {
-      font-size: 18px;
-      font-weight: 600;
-      margin-bottom: 4px;
-    }
-
-    .banner p {
-      font-size: 13px;
-    }
-
-    .section {
-      background: #1e1e1e;
-      margin: 12px 0;
-      border-radius: 10px;
-      padding: 16px;
-    }
-
-    body.light-theme .section {
-      background: #f0f0f0;
-      color: #000;
-    }
-
-    .section-title {
-      font-size: 18px;
-      font-weight: 600;
-      margin-bottom: 12px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: 12px;
-    }
-
-    .grid-item {
-      background: #292929;
-      padding: 12px;
-      border-radius: 10px;
-      text-align: center;
-      font-size: 14px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .grid-item:hover {
-      background: #333;
-    }
-
-    body.light-theme .grid-item {
-      background: #ddd;
-    }
-
-    body.light-theme .grid-item:hover {
-      background: #ccc;
-    }
-
-    .icons-row {
-      display: flex;
-      gap: 16px;
-      margin-top: 10px;
-    }
-
-    .icon {
-      font-size: 24px;
-      cursor: pointer;
-    }
-
-    .timetable {
-      display: flex;
-      overflow-x: auto;
-      gap: 6px;
-      background: #1a1a1a;
-      padding: 10px;
-      border-radius: 8px;
-      margin-top: 10px;
-    }
-
-    .timetable div {
-      flex: 0 0 auto;
-      text-align: center;
-      padding: 10px 16px;
-      background: #333;
-      border-radius: 6px;
-      white-space: nowrap;
-      cursor: pointer;
-    }
-
-    body.light-theme .timetable {
-      background: #e0e0e0;
-    }
-
-    body.light-theme .timetable div {
-      background: #bbb;
-    }
-
-    footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background: #1a1a1a;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      border-top: 1px solid #333;
-      z-index: 1003;
-    }
-
-    footer i {
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    body.light-theme footer {
-      background: #f5f5f5;
-      border-color: #ccc;
-    }
-
-    #modal, #notifModal, #semPopup {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-
-    .modal-content {
-      background: #fff;
-      color: #000;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 300px;
-      text-align: center;
-    }
-
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 16px;
-      background: #1e1e1e;
-    }
-
-    body.light-theme .top-bar {
-      background: #eee;
-    }
-
-    .toggle-switch {
-      width: 50px;
-      height: 26px;
-      background: #444;
-      border-radius: 50px;
-      position: relative;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .toggle-circle {
-      width: 22px;
-      height: 22px;
-      background: #fff;
-      border-radius: 50%;
-      position: absolute;
-      top: 2px;
-      left: 2px;
-      transition: transform 0.3s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 14px;
-    }
-
-    body.light-theme .toggle-switch .toggle-circle {
-      transform: translateX(24px);
-    }
-
-    body.light-theme .toggle-switch {
-      background: #ddd;
-    }
-
-    .sem-box {
-      background: #fff;
-      color: #000;
-      padding: 16px;
-      border-radius: 12px;
-      text-align: center;
-      width: 90%;
-      max-width: 280px;
-      font-size: 14px;
-    }
-
-    .sem-box h3 {
-      margin-bottom: 10px;
-      font-size: 16px;
-    }
-
-    .sem-box button {
-      background: orange;
-      color: #fff;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 6px;
-      font-weight: bold;
-      font-size: 13px;
-      cursor: pointer;
-    }
-
-    @media (max-width: 480px) {
-      .top-bar h3 {
-        font-size: 16px;
-      }
-
-      .section-title {
-        font-size: 16px;
-      }
-
-      .grid-item {
-        font-size: 12px;
-        padding: 10px;
-      }
-
-      .icon {
-        font-size: 20px;
-      }
-
-      .timetable div {
-        padding: 8px 12px;
-        font-size: 13px;
-      }
-
-      footer i {
-        font-size: 18px;
-      }
-
-      header {
-        padding-bottom: 8px;
-      }
-
-      .container {
-        padding-bottom: 100px;
-      }
-
-      footer {
-        padding: 8px 0;
-      }
-    }
+    * { margin:0; padding:0; box-sizing:border-box; -webkit-tap-highlight-color:transparent; }
+    body { font-family:'Poppins',sans-serif; background:#121212; color:#fff; transition:background .3s,color .3s; line-height:1.6; }
+    body.light-theme { background:#fff; color:#000; }
+    .top-bar { display:flex; justify-content:space-between; align-items:center; padding:10px 16px; background:#1e1e1e; }
+    body.light-theme .top-bar { background:#eee; }
+    .toggle-switch { width:50px; height:26px; background:#444; border-radius:50px; position:relative; cursor:pointer; transition:background .3s; }
+    .toggle-circle { width:22px; height:22px; background:#fff; border-radius:50%; position:absolute; top:2px; left:2px; transition:transform .3s ease; display:flex; align-items:center; justify-content:center; font-size:14px; }
+    body.light-theme .toggle-switch .toggle-circle { transform:translateX(24px); }
+    body.light-theme .toggle-switch { background:#ddd; }
+    header { padding:12px 16px 4px; }
+    .timetable { display:flex; overflow-x:auto; gap:6px; background:#1a1a1a; padding:10px; border-radius:8px; margin-top:10px; }
+    .timetable div { flex:0 0 auto; text-align:center; padding:10px 16px; background:#333; border-radius:6px; cursor:pointer; }
+    body.light-theme .timetable { background:#e0e0e0; }
+    body.light-theme .timetable div { background:#bbb; }
+    .banner { background:linear-gradient(135deg,orange,#ff8800); padding:12px; border-radius:10px; text-align:center; color:#fff; margin:8px 0 6px; }
+    .banner h3 { font-size:18px; font-weight:600; }
+    .banner p { font-size:13px; }
+    .container { padding:0 16px 100px; }
+    .section { background:#1e1e1e; margin:12px 0; border-radius:10px; padding:16px; }
+    body.light-theme .section { background:#f0f0f0; color:#000; }
+    .section-title { font-size:18px; font-weight:600; margin-bottom:12px; }
+    .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(120px,1fr)); gap:12px; }
+    .grid-item { background:#292929; padding:12px; border-radius:10px; text-align:center; font-size:14px; cursor:pointer; transition:background .3s; }
+    .grid-item:hover { background:#333; }
+    body.light-theme .grid-item { background:#ddd; }
+    body.light-theme .grid-item:hover { background:#ccc; }
+    .social-icons { display:flex; justify-content:center; gap:16px; margin-top:12px; flex-wrap:wrap; }
+    .social-icons a { display:flex; align-items:center; justify-content:center; width:52px; height:52px; border-radius:50%; overflow:hidden; transition:transform .3s; box-shadow:0 2px 6px rgba(0,0,0,.3); background:#fff; }
+    .social-icons a:hover { transform:scale(1.1); }
+    .social-icons img { width:100%; height:100%; object-fit:cover; }
+    footer { position:fixed; bottom:0; width:100%; background:#1a1a1a; display:flex; justify-content:space-around; padding:10px 0; border-top:1px solid #333; z-index:1003; }
+    footer i { font-size:20px; cursor:pointer; }
+    body.light-theme footer { background:#f5f5f5; border-color:#ccc; }
+    #modal, #notifModal, #semPopup { display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:999; }
+    .modal-content, .sem-box { background:#fff; color:#000; padding:20px; border-radius:12px; text-align:center; max-width:300px; width:90%; }
+    .sem-box button { background:orange; color:#fff; border:none; padding:8px 16px; border-radius:6px; font-weight:bold; font-size:13px; cursor:pointer; margin-top:10px; }
+    @media(max-width:480px){ .grid-item{font-size:12px;padding:10px;} .timetable div{padding:8px 12px;font-size:13px;} footer i{font-size:18px;} }
   </style>
 </head>
 <body>
   <div class="top-bar">
     <h3>MY VTU</h3>
-    <div style="display: flex; align-items: center; gap: 12px;">
-      <i class="fas fa-bell" onclick="showNotif()" style="font-size: 20px; cursor:pointer;"></i>
+    <div style="display:flex; align-items:center; gap:12px;">
+      <i class="fas fa-bell" onclick="showNotif()" style="font-size:20px; cursor:pointer;"></i>
       <div class="toggle-switch" onclick="toggleTheme()">
         <div class="toggle-circle" id="toggleIcon">🌙</div>
       </div>
@@ -306,7 +57,7 @@
   </div>
 
   <header>
-    <h2>Welcome, <span style="color: orange">Shridhar J</span></h2>
+    <h2>Welcome, <span style="color:orange">Shridhar J</span></h2>
     <div class="timetable">
       <div onclick="openSem('1st Sem')">1st Sem</div>
       <div onclick="openSem('2nd Sem')">2nd Sem</div>
@@ -356,11 +107,19 @@
 
     <div class="section">
       <div class="section-title">Follow Us</div>
-      <div class="icons-row">
-        <i class="fab fa-instagram icon"></i>
-        <i class="fab fa-telegram icon"></i>
-        <i class="fab fa-twitter icon"></i>
-        <i class="fab fa-youtube icon"></i>
+      <div class="social-icons">
+        <a href="https://whatsapp.com/channel/0029VamFgKlF1YlWMNixr70b" target="_blank" title="WhatsApp">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+        </a>
+        <a href="https://www.instagram.com/vtubelgaumupdates?igsh=ajZtdmc1eTVtM2tp" target="_blank" title="Instagram">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
+        </a>
+        <a href="https://t.me/+wI9J8oGprVVkZGE1" target="_blank" title="Telegram">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" />
+        </a>
+        <a href="https://www.youtube.com/@edustar-be-kea?sub_confirmation=1" target="_blank" title="YouTube">
+          <img src="21.AVIF" alt="YouTube" />
+        </a>
       </div>
     </div>
   </div>
@@ -387,44 +146,26 @@
       '7th Sem': 'https://drive.google.com/file/d/7ggg/view',
       '8th Sem': 'https://drive.google.com/file/d/8hhh/view'
     };
-
     let currentSem = '';
-
     function openSem(sem) {
       currentSem = sem;
       document.getElementById('popupSem').innerText = `${sem} – Materials Available`;
       document.getElementById('semPopup').style.display = 'flex';
     }
-
     function openDrive() {
-      const url = driveLinks[currentSem];
-      if (url) {
-        window.open(url, '_blank');
-      }
+      window.open(driveLinks[currentSem], '_blank');
       document.getElementById('semPopup').style.display = 'none';
     }
-
     function showModal(content) {
       document.getElementById('modalContent').innerText = content;
       document.getElementById('modal').style.display = 'flex';
     }
-
-    document.getElementById('modal').onclick = (e) => {
-      if (e.target.id === 'modal') document.getElementById('modal').style.display = 'none';
-    };
-
+    document.getElementById('modal').onclick = e => { if(e.target.id==='modal') e.target.style.display='none' };
     function showNotif() {
       document.getElementById('notifModal').style.display = 'flex';
     }
-
-    document.getElementById('notifModal').onclick = (e) => {
-      if (e.target.id === 'notifModal') document.getElementById('notifModal').style.display = 'none';
-    };
-
-    document.getElementById('semPopup').onclick = (e) => {
-      if (e.target.id === 'semPopup') document.getElementById('semPopup').style.display = 'none';
-    };
-
+    document.getElementById('notifModal').onclick = e => { if(e.target.id==='notifModal') e.target.style.display='none' };
+    document.getElementById('semPopup').onclick = e => { if(e.target.id==='semPopup') e.target.style.display='none' };
     function toggleTheme() {
       const body = document.body;
       const icon = document.getElementById('toggleIcon');
@@ -432,5 +173,6 @@
       icon.textContent = body.classList.contains('light-theme') ? '☀️' : '🌙';
     }
   </script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 </html>
